[mod] 社交模块开发
